<?xml version="1.0"?>
<package format = "2">
  <name>astar_planner</name>
  <version>1.6.0</version>
  <description>The astar_planner package</description>

  <maintainer email="antm678@ertl.jp">ando</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>opt_utils</depend>
  <depend>internal_grid_map</depend>
  <depend>visualization_msgs</depend>
  <depend>control_msgs</depend>
  <depend>grid_map_ros</depend>
  <depend>car_model</depend>
  <export>
  </export>
</package>
